2004-12-22 Tiago Cogumbreiro <cogumbreiro@users.sf.net>

	* mastering.py:
	ErrorTrapper, class used to show an error message showing which files were
	not added.
	(AddFile.on_finished): now this operation returns the same success value as
	the metadata fetching operation.
	(AudioMastering.add_file), (AudioMastering.add_files):
	Uses ErrorTrapper.

	* audio.py:
	(AudioMetadata):
	Now returns the correct operation success value.
	
	* serpentine_shell.py:
	Removed the file dialog title for HIG compliance.
	
	* gtk_util.py:
	New function to show error dialogs: dialog_error
	(hig_alert):
	Removed title and corrected image alignment for HIG compliance.
	(dialog_warn): Changed the button from OK to Close, for HIG compliance.
	
	* operations.py:
	(OperationsQueue):
	Adds support for queues that do not abort on an operation error.
	
	* recording.py:
	* serpentine_shell.py:
	Moved RecordingMedia class to recording.py
	
	* recording.py:
	(RecordMusicList.stop):
	Canceling a recording operation now works.
	(RecordMusicList.__insert_cd):
	Added a missing case for the dialog.
	
	* preferences.py:
	Added support for gconf throw the new module gaw.py
	
	* converting.py:
	(GetMusic.start): Made GetMusic more effecting, adding support for operations
	generators that can throw exceptions (fetch_music method).
	(GstMusicPool.fetch_music): closes the mkstemp file descriptor.
	(GvfsMusicPool.is_available): corrected a bug introduced in last commits.
	
2004-12-21 Tiago Cogumbreiro <cogumbreiro@users.sf.net>
	* serpentine_shell.py:
	(MainWindow.__init__):
	Handle systems which do not have recorder devices.
	Do not set the default device on DriveSelection (this is done internally).
	Update speed widget explicitly.
	
	* preferences.py:
	(RecordingPreferences.__update_speed):
	When user does not have a device turn the speed widget insensitive.
	
	* converting.py:
	unique_music_id was moved up to GstMusicPool and corrected, since it was
	not working correctly.
	
	* gnome_util.py: